--- a/examples/SampleMFC_Gauges/SampleMFC_GaugesUnit/SampleMFC_GaugesUnit.vcproj
+++ b/examples/SampleMFC_Gauges/SampleMFC_GaugesUnit/SampleMFC_GaugesUnit.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib xerces-c_2D.lib rpcrt4.lib odbc32.lib odbccp32.lib comctl32.lib wsock32.lib ole32.lib oleaut32.lib GUIPlugin_d.lib VE_ConductorLib_d.lib"
-				OutputFile="SampleMFCUnit.exe"
+				OutputFile="..\Units\SampleMFCUnit.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(ACE_ROOT)\lib&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
 				GenerateDebugInformation="TRUE"
@@ -53,9 +53,7 @@
 				MkTypLibCompatible="FALSE"
 				TypeLibraryName="$(IntDir)/$(ProjectName).tlb"/>
 			<Tool
-				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"/>
+				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
