--- a/examples/GLCanvasSampleApp/GLCanvasSampleAppUIPlugin/GLCanvasSampleApp.vcproj
+++ b/examples/GLCanvasSampleApp/GLCanvasSampleAppUIPlugin/GLCanvasSampleApp.vcproj
@@ -100,7 +100,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="GUIPlugin_d.lib xerces-c_2d.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxbase26d.lib wxmsw26d_core.lib"
+				AdditionalDependencies="GUIPlugin_d.lib xerces-c_2d.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxbase26d.lib wxmsw26d_core.lib opengl32.lib GlU32.Lib wxmsw26d_gl.lib"
 				OutputFile="..\GUIPlugins\win32\GLCanvasSampleApp_d.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
@@ -146,6 +146,15 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;f90;for;f;fpp">
 			<File
+				RelativePath=".\GL_Engine.cpp">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\GLCanvasSampleApp.cpp">
 			</File>
 			<File
@@ -162,6 +171,9 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;fi;fd">
 			<File
+				RelativePath=".\GL_Engine.h">
+			</File>
+			<File
 				RelativePath=".\GLCanvasSampleApp.h">
 			</File>
 			<File
@@ -176,5 +188,3 @@
 	<Globals>
 	</Globals>
 </VisualStudioProject>
-
-
