minor updates to fix texture preprocessor as wel las correct unix build problems

--- a/VE_CE/Makefile
+++ b/VE_CE/Makefile
@@ -44,16 +44,15 @@ LINKALL_OFF=
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VEOpen/skel 
-
-EXTRA_INCLUDES += -I$(VE_SUITE_HOME)/VE_Conductor/Framework -I$(VE_SUITE_HOME)/VEOpen/skel 
+EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Open/skel 
+ 
 EXTRA_INCLUDES += -I$(VE_SUITE_HOME)
 
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_ConductorLib
+EXTRA_LIBS+= -lVE_XMLLib
 
 include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 
-#include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
 
