--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -30,7 +30,8 @@
 #
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-DIRS= ${VE_SUITE_HOME}/VEOpen \
+DIRS= ${VE_SUITE_HOME}/VE_Open \
+      ${VE_SUITE_HOME}/VE_Open/VE_XML \
       ${VE_SUITE_HOME}/VE_CE \
       ${VE_SUITE_HOME}/VE_Conductor \
       ${VE_SUITE_HOME}/VE_Xplorer \
@@ -47,7 +48,8 @@ default: all
 
 all: $(DIRS)
 
-${VE_SUITE_HOME}/VEOpen \
+${VE_SUITE_HOME}/VE_Open \
+${VE_SUITE_HOME}/VE_Open/VE_XML \
 ${VE_SUITE_HOME}/VE_CE \
 ${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Xplorer \
