--- a/VE_Conductor/Makefile.conductorlib
+++ b/VE_Conductor/Makefile.conductorlib
@@ -43,7 +43,6 @@ EXTRA_PATH_FOR_SOURCES+= \
                         $(VE_SUITE_HOME)/VE_Conductor/Framework
 
 EXTRA_INCLUDES+= \
-               -I$(VE_SUITE_HOME)/VEOpen/skel \
                -I$(VE_SUITE_HOME)
 
 # for xercese includes
@@ -61,8 +60,9 @@ endif
 SRCS=\
    interface.cpp \
    package.cpp \
-	string_ops.cpp \
-	GeometryDataBuffer.cpp 
+   string_ops.cpp \
+   GeometryDataBuffer.cpp\
+   DOMDocumentManager.cpp 
 			
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
