--- a/VE_Xplorer/VE_Util/Makefile.utillib
+++ b/VE_Xplorer/VE_Util/Makefile.utillib
@@ -24,55 +24,50 @@
 #
 # -----------------------------------------------------------------
 # File:          $RCSfile: Makefile,v $
-# Date modified: $Date: 2005-06-11 15:04:41 -0500 (Sat, 11 Jun 2005) $
-# Version:       $Rev: 2404 $
+# Date modified: $Date: 2005-06-27 02:00:28 -0500 (Mon, 27 Jun 2005) $
+# Version:       $Rev: 2519 $
 # -----------------------------------------------------------------
 #
 # *************** <auto-copyright.pl END do not edit this line> ***************
+#
+#
+#_______________________________CUSTOM OPTIONS__________________________________
+#
+# CLUSTER_APP now is defined as TRUE or FALSE from the setup script
+#_______________________________________________________________________________
 
 CFDUNAME = $(shell uname)
-ifeq ($(SCENE_GRAPH), OSG)
-   OSG = _osg
-else
-   OSG = _pf
-endif
-
-ifeq ($(TAO_BUILD), TRUE)
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
-   EXEC_TAG = _tao
-endif
-
-# for osg and patented stuff
-ifeq ($(VE_PATENTED), TRUE)
-   EXTRA_CXXFLAGS+= -DVE_PATENTED
-   PATENTED_TAG = _vep
-endif
 
 # IRIX needs these flags
 ifeq (${CFDUNAME},IRIX64)
    EXTRA_CXXFLAGS+= -D_IRIX
    EXTRA_LIBS+= -L/usr/freeware/lib32
 endif
+
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
-   cfdVEBaseClass.cxx
-
+   cfdAccessoryFunctions.cxx \
+   cfdGrid2Surface.cxx \
+   cfdVTKFileHandler.cxx \
+   cleanVtk.cpp \
+   fileIO.cxx \
+   readWriteVtkThings.cxx
+			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Xplorer
+EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
+
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
 
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
 
-APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/libGraphicalPlugin$(EXEC_TAG)$(OSG)$(PATENTED_TAG).so
-# object files are being stored in a system-dependent directory so that builds
-# for multiple platforms may be maintained simultaneously.
-
+APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/libVE_UtilLib.so
 #OBJDIR is the place that the object files are stored.
-OBJDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
+OBJDIR= $(CFDHOSTTYPE)_VE_UtilLib
 
 #DEPDIR is the place that the dependency files are stored.
-DEPDIR= $(CFDHOSTTYPE)$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
+DEPDIR= $(CFDHOSTTYPE)_VE_UtilLib
 
 default: all
 
@@ -80,44 +75,36 @@ default: all
 # 'mkdir -p' silently ignores, so no test needed. Works with multiple arguments.
 all:
 	mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)
-	$(MAKE) -f Makefile.graphicalpluginlib NO_DEPEND=0 cxx
-	$(MAKE) -f Makefile.graphicalpluginlib $(APP_NAME)
+	$(MAKE) -f Makefile.utillib NO_DEPEND=0 cxx
+	$(MAKE) -f Makefile.utillib $(APP_NAME)
 
-srcdir= .
+srcdir= ..
 
 # turn off dependencies for idl stuff, make clean
 NO_DEPEND= YES
 
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
-
-ifeq ($(SCENE_GRAPH), OSG)
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.osg.mk
-else
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.pf.mk
-endif
 
 # One of these must be uncommented.
 DEBUG_APP?= TRUE
 #OPTIM_APP?= TRUE
+
+#EXTRA_DEBUG_FLAGS+= -g -D_DEBUG -gslim 
+EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
+
+EXTRA_LIBS+= -shared
+ifeq (${CFDHOSTTYPE},IRIX64)
+   # For ANSI std headers
+else
+   EXTRA_LDFLAGS+= -fPIC
+   EXTRA_CXXFLAGS+= -fPIC
+endif
 
 LINKALL_ON= -all
 LINKALL_OFF=
 
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
-
-EXTRA_LDFLAGS+= -shared
-# IRIX needs these flags
-ifeq (${CFDUNAME},IRIX64)
-   EXTRA_CXXFLAGS+= 
-   EXTRA_LIBS+= 
-else
-   EXTRA_CXXFLAGS+= -fPIC
-   EXTRA_LDFLAGS+= -fPIC
-endif
 
 CXX_GEN_DIR= .
 
